# analog-modular-synthesizer

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md  markdown-link-check.json
.github/workflows/: ci.yml
case/: README.md
docs/: architecture.md  references.md  summary.md  user_manual.md
docs/modules/: 01-power-supply.md  02-midi-cv.md  03-vco.md  04-mixer.md  05-vcf.md  06-adsr.md  07-vca.md  08-case-panels.md
hardware/: README.md
hardware/01-power-supply/: README.md  bom.csv
hardware/01-power-supply/notes/: design-notes.md
hardware/02-midi-cv/: README.md  bom.csv
hardware/03-vco/: README.md  bom.csv
hardware/04-mixer/: README.md  bom.csv
hardware/05-vcf/: README.md  bom.csv
hardware/06-adsr/: README.md  bom.csv
hardware/07-vca/: README.md  bom.csv
simulations/: README.md
software/midi-cv/: README.md  pyproject.toml
software/midi-cv/sam17/: __init__.py  __main__.py  settings.py
software/midi-cv/sam17/data/: notes.json  tuning.json
software/midi-cv/sam17/hardware/: __init__.py  buttons.py  dac.py  gpio.py  lcd.py
software/midi-cv/sam17/midi/: __init__.py  controller.py  usb_detector.py
software/midi-cv/sam17/modes/: __init__.py  arp.py  base.py  glide.py  standard.py  step_sequencer.py  tune.py
software/midi-cv/sam17/ui/: __init__.py  menu.py
software/midi-cv/tests/: conftest.py  test_dac.py  test_menu.py  test_standard_mode.py
